<resources>
    <string name="app_name" translatable="false">QR code Scanner and Generator</string>
    <string name="qr_code_bar_code_scanner">QR Code Barcode Scanner</string>
    <string name="continue_1">Continue</string>
    <string name="qr_code">Qr Code</string>
    <string name="qr_code_scanner">QR Code Scanner</string>
    <string name="qr_code_generator">QR Code Generator</string>
    <string name="history">History</string>
    <string name="settings">Settings</string>
    <string name="qr_code_scan">Qr Code Scan</string>
    <string name="take_a_photo">Take a Photo</string>
    <string name="capture_qr_code_for_scan">Capture Qr Code For Scan</string>
    <string name="choose_from_gallery">Choose From Gallery</string>
    <string name="choose_image_from_gallery_for_scan">Choose Image From Gallery For Scan</string>
    <string name="scan_result">Scan Result</string>
    <string name="date_and_time_of_scan">Date and Time of Scan :</string>
    <string name="body">Body</string>
    <string name="web_address">Web Address :</string>
    <string name="share">Share</string>
    <string name="download">Download</string>
    <string name="scan_again">Scan Again</string>
    <string name="home">Home</string>
    <string name="notification">Notification</string>
    <string name="rate_now">Rate Now</string>
    <string name="language">Language</string>
    <string name="qr_generator">QR Generator</string>
    <string name="text">Text</string>
    <string name="wifi">wifi</string>
    <string name="phone">Phone</string>
    <string name="website">website</string>
    <string name="qr_code_will_be_difficult_to_identify_when_content_exceeds_150_characters">QR code will be difficult to identify when content exceeds 150 characters</string>
    <string name="create">Create</string>
    <string name="please_fill_in_the_text_here">Please fill in the text here</string>
    <string name="password">Password :</string>
    <string name="phone_number">Phone Number :</string>
    <string name="website_address">Website Address :</string>
    <string name="generated_qr_result">Generated QR Result</string>
    <string name="decorate">Decorate</string>
    <string name="generate_again">Generate Again</string>
    <string name="decorate_qr">Decorate QR</string>
    <string name="logo">Logo</string>
    <string name="qr_color">QR Color</string>
    <string name="qr_logo">QR Logo</string>
    <string name="save">Save</string>
    <string name="discard">Discard</string>
    <string name="qr_color_1">QR Color</string>
    <string name="enter_text">Enter text</string>
    <string name="text_solid_color">Text Solid Color</string>
</resources>