<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/back_icon_4"
        android:layout_width="@dimen/_15sdp"
        android:layout_height="@dimen/_15sdp"
        android:src="@drawable/back_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.088"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.105" />

    <TextView
        android:id="@+id/qr_generator_tv"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_20sdp"
        android:text="@string/qr_generator"
        android:textColor="@color/black"
        android:textSize="@dimen/_14ssp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.56"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.096" />

    <ImageView
        android:id="@+id/qr_generator_options_card_text"
        android:layout_width="@dimen/_60sdp"
        android:layout_height="@dimen/_50sdp"
        android:src="@drawable/qr_generator_options_card"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.081"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.231" />

    <ImageView
        android:id="@+id/qr_code_generator_options_circle_text"
        android:layout_width="@dimen/_25sdp"
        android:layout_height="@dimen/_25sdp"
        android:src="@drawable/qr_code_generator_options_circle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.142"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.233" />

    <ImageView
        android:id="@+id/qr_code_generator_text_icon"
        android:layout_width="@dimen/_12sdp"
        android:layout_height="@dimen/_12sdp"
        android:layout_marginStart="@dimen/_3sdp"
        android:layout_marginTop="@dimen/_2sdp"
        android:src="@drawable/qr_code_generator_text_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.146"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.236" />

    <TextView
        android:id="@+id/text_tv"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_14sdp"
        android:text="@string/text"
        android:textColor="@color/black"
        android:textSize="@dimen/_9ssp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/qr_generator_options_card_text"
        app:layout_constraintEnd_toEndOf="@+id/qr_generator_options_card_text"
        app:layout_constraintHorizontal_bias="0.71"
        app:layout_constraintStart_toStartOf="@+id/qr_generator_options_card_text"
        app:layout_constraintTop_toTopOf="@+id/qr_generator_options_card_text"
        app:layout_constraintVertical_bias="0.879" />

    <ImageView
        android:id="@+id/qr_generator_options_card_wifi"
        android:layout_width="@dimen/_60sdp"
        android:layout_height="@dimen/_50sdp"
        android:src="@drawable/qr_generator_options_card"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.357"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.231" />

    <ImageView
        android:id="@+id/qr_code_generator_options_circle_wifi"
        android:layout_width="@dimen/_25sdp"
        android:layout_height="@dimen/_25sdp"
        android:src="@drawable/qr_code_generator_options_circle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.369"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.233" />

    <ImageView
        android:id="@+id/qr_code_generator_wifi_icon"
        android:layout_width="@dimen/_12sdp"
        android:layout_height="@dimen/_12sdp"
        android:src="@drawable/qr_code_generator_wifi_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.374"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.236" />

    <TextView
        android:id="@+id/wifi_tv"
        android:layout_width="@dimen/_20sdp"
        android:layout_height="@dimen/_17sdp"
        android:layout_marginBottom="4dp"
        android:text="@string/wifi"
        android:textColor="@color/black"
        android:textSize="@dimen/_9ssp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/qr_generator_options_card_wifi"
        app:layout_constraintEnd_toEndOf="@+id/qr_generator_options_card_wifi"
        app:layout_constraintStart_toStartOf="@+id/qr_generator_options_card_wifi"
        app:layout_constraintTop_toBottomOf="@+id/qr_code_generator_options_circle_wifi" />

    <ImageView
        android:id="@+id/qr_generator_options_card_phone"
        android:layout_width="@dimen/_60sdp"
        android:layout_height="@dimen/_50sdp"
        android:src="@drawable/qr_generator_options_card"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.627"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.231" />

    <ImageView
        android:id="@+id/qr_code_generator_options_circle_phone"
        android:layout_width="@dimen/_25sdp"
        android:layout_height="@dimen/_25sdp"
        android:src="@drawable/qr_code_generator_options_circle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.612"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.233" />

    <ImageView
        android:id="@+id/qr_code_generator_phone_icon"
        android:layout_width="@dimen/_12sdp"
        android:layout_height="@dimen/_12sdp"
        android:src="@drawable/qr_code_generator_phone_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.607"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.236" />

    <TextView
        android:id="@+id/phone_tv"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_14sdp"
        android:text="@string/phone"
        android:textColor="@color/black"
        android:textSize="@dimen/_9ssp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/qr_generator_options_card_phone"
        app:layout_constraintEnd_toEndOf="@+id/qr_generator_options_card_phone"
        app:layout_constraintHorizontal_bias="0.56"
        app:layout_constraintStart_toStartOf="@+id/qr_generator_options_card_phone"
        app:layout_constraintTop_toBottomOf="@+id/qr_code_generator_options_circle_phone" />

    <ImageView
        android:id="@+id/qr_generator_options_card_website"
        android:layout_width="@dimen/_60sdp"
        android:layout_height="@dimen/_50sdp"
        android:src="@drawable/qr_generator_options_card"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.909"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.231" />

    <ImageView
        android:id="@+id/qr_code_generator_options_circle_website"
        android:layout_width="@dimen/_25sdp"
        android:layout_height="@dimen/_25sdp"
        android:src="@drawable/qr_code_generator_options_circle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.862"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.233" />

    <TextView
        android:id="@+id/website_tv"
        android:layout_width="@dimen/_35sdp"
        android:layout_height="@dimen/_14sdp"
        android:text="@string/website"
        android:textColor="@color/black"
        android:textSize="@dimen/_9ssp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/qr_generator_options_card_website"
        app:layout_constraintEnd_toEndOf="@+id/qr_generator_options_card_website"
        app:layout_constraintHorizontal_bias="0.61"
        app:layout_constraintStart_toStartOf="@+id/qr_generator_options_card_website"
        app:layout_constraintTop_toBottomOf="@+id/qr_code_generator_options_circle_website" />

    <ImageView
        android:id="@+id/qr_code_generator_website_icon"
        android:layout_width="@dimen/_12sdp"
        android:layout_height="@dimen/_12sdp"
        android:src="@drawable/qr_code_generator_website_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.848"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.239" />

    <EditText
        android:id="@+id/qr_code_generator_input_rectangle"
        android:layout_width="@dimen/_280sdp"
        android:layout_height="@dimen/_150sdp"
        android:layout_marginTop="@dimen/_40sdp"
        android:background="@drawable/qr_code_generator_input_rectangle"
        android:focusable="true"
        android:gravity="center"
        android:textColorHint="@android:color/darker_gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.442" />

    <TextView
        android:id="@+id/please_fill_in_the_text_here_tv"
        android:layout_width="@dimen/_110sdp"
        android:layout_height="@dimen/_15sdp"
        android:text="@string/please_fill_in_the_text_here"
        android:textColor="@color/white"
        android:textSize="@dimen/_9ssp"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/qr_code_generator_input_rectangle"
        app:layout_constraintEnd_toEndOf="@+id/qr_code_generator_input_rectangle"
        app:layout_constraintHorizontal_bias="0.14"
        app:layout_constraintStart_toStartOf="@+id/qr_code_generator_input_rectangle"
        app:layout_constraintTop_toTopOf="@+id/qr_code_generator_input_rectangle"
        app:layout_constraintVertical_bias="0.21" />

    <TextView
        android:id="@+id/password_tv"
        android:layout_width="@dimen/_110sdp"
        android:layout_height="@dimen/_15sdp"
        android:text="@string/password"
        android:textColor="@color/white"
        android:textSize="@dimen/_9ssp"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/qr_code_generator_input_rectangle"
        app:layout_constraintEnd_toEndOf="@+id/qr_code_generator_input_rectangle"
        app:layout_constraintHorizontal_bias="0.145"
        app:layout_constraintStart_toStartOf="@+id/qr_code_generator_input_rectangle"
        app:layout_constraintTop_toTopOf="@+id/qr_code_generator_input_rectangle"
        app:layout_constraintVertical_bias="0.212" />

    <TextView
        android:id="@+id/phone_number_tv"
        android:layout_width="@dimen/_110sdp"
        android:layout_height="@dimen/_15sdp"
        android:text="@string/phone_number"
        android:textColor="@color/white"
        android:textSize="@dimen/_9ssp"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/qr_code_generator_input_rectangle"
        app:layout_constraintEnd_toEndOf="@+id/qr_code_generator_input_rectangle"
        app:layout_constraintHorizontal_bias="0.15"
        app:layout_constraintStart_toStartOf="@+id/qr_code_generator_input_rectangle"
        app:layout_constraintTop_toTopOf="@+id/qr_code_generator_input_rectangle"
        app:layout_constraintVertical_bias="0.212" />

    <TextView
        android:id="@+id/website_address_tv"
        android:layout_width="@dimen/_110sdp"
        android:layout_height="@dimen/_15sdp"
        android:text="@string/website_address"
        android:textColor="@color/white"
        android:textSize="@dimen/_9ssp"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/qr_code_generator_input_rectangle"
        app:layout_constraintEnd_toEndOf="@+id/qr_code_generator_input_rectangle"
        app:layout_constraintHorizontal_bias="0.145"
        app:layout_constraintStart_toStartOf="@+id/qr_code_generator_input_rectangle"
        app:layout_constraintTop_toTopOf="@+id/qr_code_generator_input_rectangle"
        app:layout_constraintVertical_bias="0.212" />

    <ImageView
        android:id="@+id/qr_code_generator_warning_icon"
        android:layout_width="@dimen/_20sdp"
        android:layout_height="@dimen/_20sdp"
        android:src="@drawable/qr_code_generator_warning_icon"
        app:layout_constraintBottom_toTopOf="@+id/qr_code_generator_screen_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.059"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/qr_code_generator_input_rectangle"
        app:layout_constraintVertical_bias="0.23000002" />

    <TextView
        android:id="@+id/qr_code_will_be_difficult_to_identify_when_content_exceeds_150_characters_tv"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="@dimen/_30sdp"
        android:text="@string/qr_code_will_be_difficult_to_identify_when_content_exceeds_150_characters"
        android:textColor="@color/black"
        android:textSize="@dimen/_10ssp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/qr_code_generator_screen_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.28"
        app:layout_constraintStart_toEndOf="@+id/qr_code_generator_warning_icon"
        app:layout_constraintTop_toBottomOf="@+id/qr_code_generator_input_rectangle"
        app:layout_constraintVertical_bias="0.23000002" />

    <ImageView
        android:id="@+id/qr_code_generator_screen_button"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="@dimen/_50sdp"
        android:src="@drawable/qr_code_generator_screen_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.98" />

    <TextView
        android:id="@+id/create_tv"
        android:layout_width="@dimen/_50sdp"
        android:layout_height="@dimen/_20sdp"
        android:text="@string/create"
        android:textColor="@color/white"
        android:textSize="@dimen/_14ssp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/qr_code_generator_screen_button"
        app:layout_constraintEnd_toEndOf="@+id/qr_code_generator_screen_button"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toStartOf="@+id/qr_code_generator_screen_button"
        app:layout_constraintTop_toTopOf="@+id/qr_code_generator_screen_button" />

    <com.facebook.shimmer.ShimmerFrameLayout
        android:id="@+id/shimmer_view_container_qr_generator"
        android:layout_width="@dimen/_247sdp"
        android:layout_height="wrap_content"
        android:background="@color/grey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/qr_code_will_be_difficult_to_identify_when_content_exceeds_150_characters_tv"
        app:layout_constraintVertical_bias="0.26999998">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <include layout="@layout/placeholder_layout_for_shimmer_loading"/>

        </LinearLayout>

        <com.google.android.gms.ads.AdView
            android:id="@+id/adView_activity_qr_code_generator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            app:adSize="BANNER"
            app:adUnitId="ca-app-pub-3940256099942544/6300978111" />

    </com.facebook.shimmer.ShimmerFrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>